# docs/swagger.json
@@ -68,7 +68,7 @@
                         "JWT": []
                     }
                 ],
-                "description": "查询单个branch",
+                "description": "查询branch",
                 "consumes": [
                     "application/json"
                 ],
@@ -245,7 +245,7 @@
                         "JWT": []
                     }
                 ],
-                "description": "查询branch列表",
+                "description": "查询单个branch列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -379,7 +379,7 @@
                         "JWT": []
                     }
                 ],
-                "description": "查询单个新闻",
+                "description": "查询新闻",
                 "consumes": [
                     "application/json"
                 ],
@@ -508,7 +508,7 @@
                         "JWT": []
                     }
                 ],
-                "description": "查询新闻列表",
+                "description": "查询单个新闻列表",
                 "consumes": [
                     "application/json"
                 ],
@@ -802,15 +802,64 @@
         "vo.CreateBranchResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "branch_name": {
+                    "description": "branch_name",
+                    "type": "string"
+                },
+                "branch_type": {
+                    "description": "branch_type",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.Branch"
+                "commit_id": {
+                    "description": "commit_id",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "commit_time": {
+                    "description": "commit_time",
+                    "type": "integer"
+                },
+                "commit_title": {
+                    "description": "commit_title",
+                    "type": "string"
+                },
+                "committer": {
+                    "description": "committer",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "creator",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "is_dev": {
+                    "description": "is_dev",
+                    "type": "integer"
+                },
+                "jira_key": {
+                    "description": "jira_key",
+                    "type": "string"
+                },
+                "repo": {
+                    "description": "repo",
+                    "type": "string"
+                },
+                "sync_time": {
+                    "description": "sync_time",
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -835,15 +884,32 @@
         "vo.CreateNewsResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "content": {
+                    "description": "新闻内容",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "新闻创建者",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.News"
+                "title": {
+                    "description": "新闻标题",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -907,15 +973,64 @@
         "vo.GetBranchResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "branch_name": {
+                    "description": "branch_name",
+                    "type": "string"
+                },
+                "branch_type": {
+                    "description": "branch_type",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.Branch"
+                "commit_id": {
+                    "description": "commit_id",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "commit_time": {
+                    "description": "commit_time",
+                    "type": "integer"
+                },
+                "commit_title": {
+                    "description": "commit_title",
+                    "type": "string"
+                },
+                "committer": {
+                    "description": "committer",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "creator",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "is_dev": {
+                    "description": "is_dev",
+                    "type": "integer"
+                },
+                "jira_key": {
+                    "description": "jira_key",
+                    "type": "string"
+                },
+                "repo": {
+                    "description": "repo",
+                    "type": "string"
+                },
+                "sync_time": {
+                    "description": "sync_time",
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -923,15 +1038,32 @@
         "vo.GetNewsResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "content": {
+                    "description": "新闻内容",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "新闻创建者",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.News"
+                "title": {
+                    "description": "新闻标题",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -939,32 +1071,48 @@
         "vo.ListBranchResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.Branch"
+                    }
+                },
+                "pageNum": {
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.PagerBranch"
+                "pageSize": {
+                    "type": "integer"
                 },
-                "message": {
-                    "description": "提示信息",
-                    "type": "string"
+                "total": {
+                    "type": "integer"
                 }
             }
         },
         "vo.ListNewsResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/vo.News"
+                    }
+                },
+                "pageNum": {
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.PagerNews"
+                "pageSize": {
+                    "type": "integer"
                 },
-                "message": {
-                    "description": "提示信息",
-                    "type": "string"
+                "total": {
+                    "type": "integer"
                 }
             }
         },
@@ -998,54 +1146,6 @@
                 "updated_at": {
                     "description": "updated_at",
                     "type": "string"
-                }
-            }
-        },
-        "vo.PagerBranch": {
-            "type": "object",
-            "properties": {
-                "extra": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/vo.Branch"
-                    }
-                },
-                "pageNum": {
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "vo.PagerNews": {
-            "type": "object",
-            "properties": {
-                "extra": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "list": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/vo.News"
-                    }
-                },
-                "pageNum": {
-                    "type": "integer"
-                },
-                "pageSize": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
@@ -1104,15 +1204,64 @@
         "vo.UpdateBranchResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "branch_name": {
+                    "description": "branch_name",
+                    "type": "string"
+                },
+                "branch_type": {
+                    "description": "branch_type",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.Branch"
+                "commit_id": {
+                    "description": "commit_id",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "commit_time": {
+                    "description": "commit_time",
+                    "type": "integer"
+                },
+                "commit_title": {
+                    "description": "commit_title",
+                    "type": "string"
+                },
+                "committer": {
+                    "description": "committer",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "creator",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "is_dev": {
+                    "description": "is_dev",
+                    "type": "integer"
+                },
+                "jira_key": {
+                    "description": "jira_key",
+                    "type": "string"
+                },
+                "repo": {
+                    "description": "repo",
+                    "type": "string"
+                },
+                "sync_time": {
+                    "description": "sync_time",
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
@@ -1140,15 +1289,32 @@
         "vo.UpdateNewsResponse": {
             "type": "object",
             "properties": {
-                "code": {
-                    "description": "0:成功，非0:失败",
+                "content": {
+                    "description": "新闻内容",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "created_at",
+                    "type": "string"
+                },
+                "creator": {
+                    "description": "新闻创建者",
+                    "type": "string"
+                },
+                "deleted_at": {
+                    "description": "deleted_at",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
                     "type": "integer"
                 },
-                "data": {
-                    "$ref": "#/definitions/vo.News"
+                "title": {
+                    "description": "新闻标题",
+                    "type": "string"
                 },
-                "message": {
-                    "description": "提示信息",
+                "updated_at": {
+                    "description": "updated_at",
                     "type": "string"
                 }
             }
