# vo/branch_request.go
@@ -7,6 +7,40 @@ import (
 
 
 
+type BranchResponse struct {
+
+    ID *int64 `json:"id" gorm:"primary_key;AUTO_INCREMENT" form:"id"` // id
+
+    Repo *string `json:"repo" form:"repo"` // repo
+
+    BranchName *string `json:"branch_name" form:"branch_name"` // branch_name
+
+    BranchType *int32 `json:"branch_type" form:"branch_type"` // branch_type
+
+    IsDev *int32 `json:"is_dev" form:"is_dev"` // is_dev
+
+    JiraKey *string `json:"jira_key" form:"jira_key"` // jira_key
+
+    CommitId *string `json:"commit_id" form:"commit_id"` // commit_id
+
+    CommitTitle *string `json:"commit_title" form:"commit_title"` // commit_title
+
+    Committer *string `json:"committer" form:"committer"` // committer
+
+    CommitTime *int32 `json:"commit_time" form:"commit_time"` // commit_time
+
+    Creator *string `json:"creator" form:"creator"` // creator
+
+    SyncTime *int32 `json:"sync_time" form:"sync_time"` // sync_time
+
+    DeletedAt *time.Time `json:"deleted_at" form:"deleted_at"` // deleted_at
+
+    CreatedAt *time.Time `json:"created_at" form:"created_at"` // created_at
+
+    UpdatedAt *time.Time `json:"updated_at" form:"updated_at"` // updated_at
+
+}
+
 
 // 查询Branch branch
 type Branch struct {
@@ -44,7 +78,7 @@ type Branch struct {
 }
 
 // 查询Branch branch
-type PagerBranch struct {
+type ListBranchResponse struct {
 	Total    int64                  `json:"total"`
 	List     []Branch          `json:"list"`
 	PageNum  int                    `json:"pageNum" form:"pageNum"`
@@ -98,6 +132,10 @@ type ListBranchRequest struct {
      PageSize *uint   `json:"pageSize" form:"pageSize"` //每页多少条
 }
 
+type GetBranchResponse struct {
+    BranchResponse
+}
+
 
 // 创建Branch branch
 type CreateBranchRequest struct {
@@ -140,6 +178,11 @@ type CreateBranchRequest struct {
      
      
 }
+
+type CreateBranchResponse struct {
+    BranchResponse
+}
+
 
 
 // 更新Branch branch
@@ -185,10 +228,17 @@ type UpdateBranchRequest struct {
      
 }
 
+type UpdateBranchResponse struct {
+    BranchResponse
+}
+
 // 删除Branch branch
 type DeleteBranchRequest struct {
     Ids      []int64 `json:"ids" uri:"ids" form:"ids"` //待编号
 }
+
+
+
 
 // 删除Branch branch
 type GetBranchRequest struct {
@@ -196,30 +246,9 @@ type GetBranchRequest struct {
 }
 
 
-
-//以下结构体只用于生成swagger文档
-type ListBranchResponse  struct {
-    Response
-    Data PagerBranch  `json:"data"`
-}
-
-type GetBranchResponse  struct {
-    Response
-    Data Branch  `json:"data"`
-}
-
-type CreateBranchResponse  struct {
-    Response
-    Data Branch  `json:"data"`
-}
-
-type UpdateBranchResponse  struct {
-    Response
-    Data Branch  `json:"data"`
-}
-
-type DeleteBranchResponse  struct {
+type DeleteBranchResponse struct {
     Response
     Data int `json:"data"`
 }
+
 
